# lib/db/src/schema/news.ts
@@ -14,6 +14,7 @@ export const newsTable = pgTable("news", {
   isFeatured: boolean("is_featured").notNull().default(false),
   commentCount: integer("comment_count").notNull().default(0),
   viewCount: integer("view_count").notNull().default(0),
+  likeCount: integer("like_count").notNull().default(0),
   createdAt: timestamp("created_at", { withTimezone: true }).notNull().defaultNow(),
 });
 
